# video-splitter

./: .gitignore  README.md  cli  pyproject.toml  sample_config.yaml  shell.nix
video_splitter/: __main__.py  splitter.py
